:sparkles: feat calcule
